# open-eval-agent

./: .gitignore  architecture.md  main.py  prd.md  pyproject.toml  test.ipynb  test.md
Agent/: test.ipynb
Agent/src/open_deep_research/: configuration.py  state.py
agent/eval_deep_agent/: prd.md
agent/eval_deep_agent/image_agent/: image-mcp.py  pyproject.toml  requirements.txt
agent/open_deep_research/: prd.md  pyproject.toml
backend/api-server/: config.py  example.txt  guide.md  main.py  prd.md  pyproject.toml  requirements.txt
backend/mcp-server/: prd.md  pyproject.toml  server.py  test.py
context/: mcp_llm.txt
database/: fake_data.py  json_to_db.py  pyproject.toml
database/mysql-connector/: db_value_change.py  init.sql
database/our_results/GaussO-Think/: aime.json  math500.json  mmlu-pro.json  mmlu-redux.json  mmlu.json
database/our_results/GaussO-Think-Ultra/: aime.json  math500.json  mmlu-pro.json  mmlu-redux.json  mmlu.json
database/our_results/KIMI-K2/: aime.json  math500.json  mmlu-pro.json  mmlu-redux.json  mmlu.json
database/our_results/KIMI-K2-AWQ/: aime.json  math500.json  mmlu-pro.json  mmlu-redux.json  mmlu.json
database/our_results/claude-3.5-sonnet/: aime.json  math500.json  mmlu-pro.json  mmlu-redux.json  mmlu.json
database/our_results/deepseek-r1/: aime.json  math500.json  mmlu-pro.json  mmlu-redux.json  mmlu.json
database/our_results/deepseek-v3/: aime.json  math500.json  mmlu-pro.json  mmlu-redux.json  mmlu.json
src/open_deep_research/: prompts.py  prompts_korean.py
tool/mcp_inspector/: usage.md
(+41 files in other folders)
